--- a/stubs/messages/release.html
+++ b/stubs/messages/release.html
@@ -1,2 +1,2 @@
-:white_circle: <b>New release of <u><a href="$REPOSITORY_URL">$REPOSITORY_NAME</a></u>: <u><a href="$RELEASE_URL">$VERSION</a></u>!</b>
+\xE2\x9A\xAA <b>New release of <u><a href="$REPOSITORY_URL">$REPOSITORY_NAME</a></u>: <u><a href="$RELEASE_URL">$VERSION</a></u>!</b>
 <i>For more details see <a href="$CHANGELOG_URL">changelog</a>.</i>
